--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -17,8 +17,8 @@
   <link rel="manifest" href="/index.webmanifest">
   
   
-  <link rel="icon" type="image/png" href="/media/icon_hu18e6caebb48b5de1c337923ca8a7d9a5_48771_32x32_fill_lanczos_center_2.png">
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu18e6caebb48b5de1c337923ca8a7d9a5_48771_192x192_fill_lanczos_center_2.png">
+  <link rel="icon" type="image/png" href="/media/icon_hu18e6caebb48b5de1c337923ca8a7d9a5_48771_32x32_fill_lanczos_center_3.png">
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu18e6caebb48b5de1c337923ca8a7d9a5_48771_192x192_fill_lanczos_center_3.png">
 
   <link rel="canonical" href="https://svenbugiel.github.io/slides/example/">
 
@@ -144,15 +144,15 @@ $$</p>
 {{% fragment %}} Three {{% /fragment %}}
 </code></pre>
 <p>Press <code>Space</code> to play!</p>
-<p><span class="fragment " >
-One
+<span class="fragment " >
+   One 
 </span>
 <span class="fragment " >
-<strong>Two</strong>
+   **Two** 
 </span>
 <span class="fragment " >
-Three
-</span></p>
+   Three 
+</span>
 
     </section>
     
