updated phone nr

--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
     
     <li>
       <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>
-      <span id="person-telephone"><a href="tel:&#43;49%20681%20302%2057362">&#43;49 681 302 57362</a></span>
+      <span id="person-telephone"><a href="tel:&#43;49%20681%2087083%202799">&#43;49 681 87083 2799</a></span>
     </li>
     
 
@@ -1790,7 +1790,7 @@
 
   
   <p class="powered-by">
-    © 2021 Sven Bugiel
+    © 2022 Sven Bugiel
   </p>
   
 
