corrected link to CV file

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
           
         
         <li>
-          <a href="/media/bugiel_cv.pdf"  aria-label="cv">
+          <a href="/files/bugiel_cv.pdf"  aria-label="cv">
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
