--- a/project/example/index.html
+++ b/project/example/index.html
@@ -986,7 +986,7 @@
       
     
     <li>
-      <a href="/media/bugiel_cv.pdf" >
+      <a href="/files/bugiel_cv.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
