--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1046,7 +1046,7 @@
       
     
     <li>
-      <a href="/media/bugiel_cv.pdf" >
+      <a href="/files/bugiel_cv.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
