--- a/publication/ndss-23/index.html
+++ b/publication/ndss-23/index.html
@@ -665,8 +665,8 @@
 
   <span >
       Sanam Ghorbani Lyastani</span>, <span >
-      Sven Bugiel</span>, <span >
-      Michael Backes</span>
+      Michael Backes</span>, <span >
+      Sven Bugiel</span>
   </div>
   
   
