--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
 </ul>
 <h4 id="program-committee-member">Program Committee Member</h4>
 <ul>
-<li>IEEE SP: <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank" rel="noopener">2022</a></li>
+<li>IEEE SP: <a href="https://www.ieee-security.org/TC/SP2024/" target="_blank" rel="noopener">2024</a>, <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank" rel="noopener">2022</a></li>
 <li>USENIX Security: <a href="https://www.usenix.org/conference/usenixsecurity23" target="_blank" rel="noopener">2023</a>, <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank" rel="noopener">2021</a>, <a href="https://www.usenix.org/conference/usenixsecurity20" target="_blank" rel="noopener">2020</a>, <a href="https://www.usenix.org/conference/usenixsecurity19" target="_blank" rel="noopener">2019</a></li>
 <li>ACM CCS: <a href="https://www.sigsac.org/ccs/CCS2019/" target="_blank" rel="noopener">2019</a>, <a href="https://www.sigsac.org/ccs/CCS2018/" target="_blank" rel="noopener">2018</a></li>
 <li>ACM SAC: <a href="https://www.sigapp.org/sac/sac2019/" target="_blank" rel="noopener">2019</a></li>
