--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 28, 2023 --><html lang="en-us" >
+<!-- Last Published: November 28, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -756,7 +756,7 @@
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Date</div>
           <div class="col-12 col-md-9">
-            Jun 1, 2030 1:00 PM &mdash; 3:00 PM
+            Jun 1, 2030 1:00 PM &amp;mdash; 3:00 PM
           </div>
         </div>
       </div>
@@ -1155,7 +1155,7 @@
   
 
 
-<script src="/js/vendor-bundle.min.f64289d8217e08e3afcd597d60836062.js"></script>
+<script src="/js/vendor-bundle.min.938a3a7554cd9f6602290411f64d2617.js"></script>
 
 
 
@@ -1211,7 +1211,7 @@
 
 
 
-<script src="/en/js/wowchemy.min.fa71bfdd82ca5b7ea4a46c3c3d1b03fa.js"></script>
+<script src="/en/js/wowchemy.min.92b0952d2b7a232e8d09c726fdb588d3.js"></script>
 
 
 
