removed links in markdown block; some weird hugo bug does not render links anymore

--- a/index.html
+++ b/index.html
@@ -1623,43 +1623,23 @@
   
   <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose"><h4 id="program-co-chair">Program (Co-)Chair</h4>
 <ul>
-<li>
- together with 
-</li>
-<li>
- together with 
-</li>
+<li>Symposium on Usable Security and Privacy (USEC'25) together with Sanchari Das</li>
+<li>Who Are You?! Adventures in Authentication Workshop 2021 (WAY'21) together with Sarah Pearman</li>
 </ul>
 <h4 id="program-committee-member">Program Committee Member</h4>
 <ul>
-<li>IEEE SP: 
-, 
-, 
-</li>
-<li>USENIX Security: 
-,
-, 
-, 
-, 
-, 
-</li>
-<li>ACM CCS: 
-, 
-</li>
-<li>ACM SAC: 
-</li>
-<li>IEEE EuroSP: 
-</li>
+<li>IEEE SP: 2025, 2024, 2022</li>
+<li>USENIX Security: 2025,2024, 2023, 2021, 2020, 2019</li>
+<li>ACM CCS: 2019, 2018</li>
+<li>ACM SAC: 2019</li>
+<li>IEEE EuroSP: 2016</li>
 </ul>
 <p><em>Workshops</em></p>
 <ul>
 <li>PasswordCon: 2025</li>
-<li>FoPI (co-located with IEEE EuroSP): 
-</li>
-<li>WAY (co-located with USENIX SOUPS): 
-</li>
-<li>SysTEX (co-located with ACM CCS): 
-</li>
+<li>FoPI (co-located with IEEE EuroSP): 2021</li>
+<li>WAY (co-located with USENIX SOUPS): 2020</li>
+<li>SysTEX (co-located with ACM CCS): 2016</li>
 </ul>
 <p><em>External Reviewer</em></p>
 <ul>
