--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: October 4, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: January 8, 2025 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="light">
   
 <head>
@@ -836,7 +836,7 @@
         
       
       <li>
-        <a href="/files/bugiel_cv.pdf" target="_blank" rel="noopener" aria-label="academicons/cv"
+        <a href="/uploads/bugiel_cv.pdf" target="_blank" rel="noopener" aria-label="academicons/cv"
            >
           <svg style="height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M249.18 328.324c-9.788 15.384-19.179 30.434-40.222 45.055c-11.256 7.89-37.164 23.306-73.99 23.306C64.709 396.685 8 345.605 8 255.801c0-78.486 53.345-140.486 128.466-140.486c30.434 0 57.474 10.521 77.387 26.304c18.414 14.65 27.038 29.304 34.563 42.456l-52.58 26.273c-3.762-8.626-8.29-17.649-19.913-27.406c-12.784-10.155-25.54-13.152-36.46-13.152c-42.821 0-65.364 39.825-65.364 84.145c0 58.238 29.7 87.143 65.364 87.143c34.563 0 48.48-24.042 57.474-39.426l52.243 26.673zm184.194-204.75H504l-92.037 265.22h-67.597l-90.904-265.22h70.625l54.843 188.6z"/></svg>
         </a>
@@ -1636,7 +1636,6 @@
 </ul>
 <p><em>Workshops</em></p>
 <ul>
-<li>PasswordCon: 2025</li>
 <li>FoPI (co-located with IEEE EuroSP): 2021</li>
 <li>WAY (co-located with USENIX SOUPS): 2020</li>
 <li>SysTEX (co-located with ACM CCS): 2016</li>
@@ -1702,7 +1701,7 @@
 
   
   <p class="powered-by text-center">
-    © 2024 Sven Bugiel.
+    © 2025 Sven Bugiel.
   </p>
   
 
